# seeker_accounting

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  R4_SIGNOFF.md  README.md  SLICE9_VALIDATION_SIGNOFF.md  _check_db_tables.py  _fix_audit_logging.py  _fix_audit_logging2.py  _fix_import_order.py  _fix_tax_resize.py  _syntax_check.py  alembic.ini  build.py  err.txt  error_handling_audit.txt  generate_february_payslip.py  generate_february_payslip_emp002.py  generate_february_payslip_emp003.py  generate_january_payslip.py  generate_january_payslip_emp002.py  generate_march_payslips.py  installer.iss  license_manager.spec  license_manager_gui.spec  module_inventory.txt  plan_t29_t43.md  pyproject.toml  seeker_accounting.spec  test_payroll_imports.py
.claude/: settings.json  settings.local.json
docs/: Seeker Accounting  Taxation Module Research and Implementation Plan.md  Wizards.md  ambient_intelligence_plan.md  chart_of_accounts_customization_wizard_blueprint.md  contracts_projects_ribbons_and_wizards_blueprint.md  inventory_upgrade_plan.md  payroll_glossary.md  payroll_p3_p14_status.md  payroll_ribbon_wizard_blueprint.md  payroll_ux_remediation_plan.md  sage_ui_benchmark_audit.md  seeker_ui_style_guide.md  taxation_implementation_blueprint.md  taxation_module.md  ui_inline_styles_audit.md
scripts/: _allocate_project_costs.py  _audit_factory_wiring.py  _audit_merge_columns.py  _audit_merge_v2.py  _audit_schema.py  _build_inline_styles_audit.py  _check_payroll.py  _check_payroll2.py  _check_payroll3.py  _cleanup_partial_so_tables.py  _extract_tax_docs.py  (+83 more)
(+1741 files in other folders)
